# Langres-RPG

./: .dockerignore  .env  .eslintrc.json  .gitignore  .prettierrc  .unimportedrc.json  Cargo.toml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  index.html  langres.db  package-lock.json  package.json  postcss.config.cjs  rust-toolchain.toml  tailwind.config.js
src-tauri/: .gitignore  .taurignore  Cargo.toml  database.db  db.db  initial_datas.yml  langres.db  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/initial_datas/: application.yml  functions.yml  loot.yml  npcs.yml  objects.yml  quests.yml  storyline.yml
src-tauri/langres_core/: Cargo.toml
src-tauri/langres_core/src/: lib.rs
src-tauri/macros/: Cargo.toml
src-tauri/macros/src/: lib.rs
src-tauri/migrations/2023-09-13-202329_create_game/: down.sql  up.sql
src-tauri/migrations/2023-10-31-205236_storyline/: down.sql  up.sql
src-tauri/migrations/2023-11-03-101510_games/: up.sql
src-tauri/migrations/2023-11-06-220214_application_datas/: up.sql
src-tauri/migrations/2023-11-21-203502_objects/: down.sql  up.sql
src-tauri/migrations/2023-11-21-215139_functions/: down.sql  up.sql
src-tauri/migrations/2024-03-02-134027_collections/: down.sql  up.sql
src-tauri/migrations/2024-03-02-134027_maps/: down.sql  up.sql
src-tauri/migrations/2024-03-19-073135_quests/: down.sql  up.sql
src-tauri/migrations/2024-03-20-172538_playerquests/: down.sql  up.sql
src-tauri/migrations/2024-03-21-233452_achievements/: down.sql  up.sql
src-tauri/migrations/2024-03-21-234620_playerachievements/: down.sql  up.sql
src-tauri/migrations/2024-03-22-200702_statistics/: down.sql  up.sql
src-tauri/migrations/2024-03-22-203651_playerstatistics/: down.sql  up.sql
src-tauri/migrations/2024-03-26-203053_loot/: down.sql  up.sql
src-tauri/migrations/2025-02-15-203710_acts/: down.sql  up.sql
src-tauri/migrations/2025-02-15-205213_maps/: down.sql  up.sql
src-tauri/migrations/2025-04-18-110435_npcs/: down.sql  up.sql
src-tauri/migrations/2025-04-24-110304_quests/: up.sql
src-tauri/models_registry/: Cargo.toml
src-tauri/models_registry/src/: lib.rs
src-tauri/saved/: 117886403.json  2804120296.json  628144946.json
src-tauri/src/: lib.rs  main.rs  mod.rs  schema.rs
src-tauri/src/achievements/: admin.rs  commands.rs  mod.rs  models.rs  tests.rs
src-tauri/src/admin/: mod.rs
src-tauri/src/app/: commands.rs  models.rs  tests.rs
src-tauri/src/application/: commands.rs  macros.rs  mod.rs  models.rs  test_macros.rs  tests.rs  types.rs
src-tauri/src/backend/: conf_tests.rs  database.rs  fixtures.rs  mod.rs  response.rs  settings.rs  tests.rs
src-tauri/src/battle/: actions.rs  alterations.rs  commands.rs  cta.rs  datas.rs  doc.md  logs.rs  mod.rs  models.rs  objects.rs  readme.md  rolls.rs  settings.rs  summary.rs  types.rs
src-tauri/src/character/: commands.rs  macros.rs  mod.rs  models.rs  tests.rs  types.rs
src-tauri/src/classes/: app.rs  character.rs  codes.rs  game.rs  inventory.rs  mod.rs  npc.rs  objects.rs  story.rs  world.rs
src-tauri/src/collection/: admin.rs  commands.rs  models.rs  tests.rs
src-tauri/src/commands/: app.rs  codes.rs  collections.rs  dashboard.rs  fetcher.rs  games.rs  maps.rs  mod.rs  npcs.rs  objects.rs  permissions.rs  story.rs  utils.rs  world.rs
src-tauri/src/config/: commands.rs  conf.rs  factories.rs  factory.rs  faker.rs  fixtures.rs  mod.rs  tests.rs
src-tauri/src/dashboard/: commands.rs  fields.rs  mod.rs  models.rs  serializers.rs  tests.rs
src-tauri/src/devtools/: models.rs  tests.rs
src-tauri/src/events/: models.rs  tests.rs
src-tauri/src/functions/: admin.rs  app.rs  codes.rs  commands.rs  games.rs  load_game.rs  macros.rs  maps.rs  mod.rs  models.rs  new_game.rs  npcs.rs  objects.rs  save_game.rs  story.rs  test_macros.rs  tests.rs  utils.rs  world.rs
src-tauri/src/game/: admin.rs  commands.rs  mod.rs  models.rs  tests.rs  types.rs
src-tauri/src/loot/: admin.rs  commands.rs  macros.rs  mod.rs  models.rs  test_macros.rs  tests.rs  types.rs
src-tauri/src/maps/: commands.rs  config.rs  constraints.rs  generator.rs  mod.rs  models.rs  options.rs  report.rs  rules.rs  settings.rs  tests.rs  tiles.rs  topology.rs  utilities.rs
src-tauri/src/models/: app.rs  character.rs  collection.rs  dices.rs  functions.rs  game.rs  inventory.rs  mod.rs  objects.rs  story.rs  time.rs  utils.rs  world.rs
src-tauri/src/npcs/: commands.rs  definitions.rs  macros.rs  mod.rs  models.rs  named.rs  tables.rs  test_macros.rs  tests.rs  types.rs
src-tauri/src/objects/: admin.rs  commands.rs  macros.rs  mod.rs  models.rs  test_macros.rs  tests.rs  types.rs
src-tauri/src/permissions/: models.rs  tests.rs
src-tauri/src/player/: mod.rs  models.rs  tests.rs
src-tauri/src/quests/: admin.rs  commands.rs  definitions.rs  macros.rs  mod.rs  models.rs  test_macros.rs  tests.rs  types.rs
src-tauri/src/settings/: commands.rs  config.rs  database.rs  errors.rs  factories.rs  mod.rs  models.rs  security.rs  settings.rs  tests.rs  variables.rs
src-tauri/src/statistics/: admin.rs  commands.rs  models.rs  tests.rs
src-tauri/src/storyline/: admin.rs  commands.rs  initial_datas.yml  macros.rs  mod.rs  models.rs  test_macros.rs  tests.rs  types.rs  utils.rs
src-tauri/src/tests/: conf.rs  factories.rs  fixtures.rs  mod.rs  test_app.rs  test_character.rs  test_dashboard.rs  test_game.rs  test_maps.rs  test_permissions.rs  test_storyline.rs  test_utils.rs
src-tauri/src/time/: commands.rs  models.rs
src-tauri/src/translations/: models.rs
src-tauri/src/utils/: commands.rs  errors.rs  factories.rs  factory.rs  faker.rs  functions.rs  mod.rs  models.rs  tests.rs
src-tauri/src/views/: mod.rs  models.rs
src-tauri/src/world/: admin.rs  commands.rs  directions.rs  display.rs  generator.rs  macros.rs  mod.rs  (+5 more)
(+490 files in other folders)
