[package]
name = "langres"
version = "0.0.1"
description = "Isometric medieval RPG game"
authors = ["Y.janssens"]
license = ""
repository = "https://github.com/y-janssens/Langres-RPG"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "langres_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "^0.4.38"
diesel = { version = "2.2.2", features = ["sqlite", "r2d2"] }
rand = "0.8.5"
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
round = "0.1.2"
r2d2 = "0.8.10"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
lazy_static = "1.5.0"
noise = "0.8.2"
dotenv = "0.15.0"
ucfirst = "0.2.2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
magic-crypt = "4.0.1"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
