[package]
name = "langres"
default-run = "langres"
version = "0.0.1"
description = "Isometric medieval RPG game"
authors = ["Y.janssens"]
license = ""
repository = "https://github.com/y-janssens/Langres-RPG"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "langres_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "shell"
path = "src/bin/shell/main.rs"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "^0.4.38"
ctor = "0.3.6"
diesel = { version = "2.2.2", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenv = "0.15.0"
eval = "0.4.3"
evcxr = "0.18.0"
langres_core = { path = "./langres_core" }
lazy_static = "1.5.0"
magic-crypt = "4.0.1"
models_registry = { path = "./models_registry" }
noise = "0.8.2"
r2d2 = "0.8.10"
rand = "0.8.5"
regex = "1.11.1"
rhai = "1.21.0"
rusqlite = { version = "0.33", features = ["bundled"] }
rustyline = "15.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-localhost = "2.2.0"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tokio = "1.43.0"
ucfirst = "0.2.2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
strum = "0.27.1"
strum_macros = "0.27.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[package.metadata.cargo-machete]
ignored = ["tauri-build"]
