[package]
name = "core"
default-run = "core"
version = "0.0.1"
license = ""
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
chrono = "^0.4.38"
core_macros = { path = "./macros" }
diesel = { version = "2.2.2", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
magic-crypt = "4.0.1"
noise = "0.8.2"
r2d2 = "0.8.10"
rand = "0.8.5"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-clipboard-manager = "2.3.1"
tauri-plugin-dialog = "2.3.1"
tauri-plugin-fs = "2.3.1"
tauri-plugin-http = "2.3.1"
tauri-plugin-notification = "2.3.1"
tauri-plugin-os = "2.3.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.1"
tauri-plugin-devtools = "2.0.1"
tokio = "1.43.0"
ucfirst = "0.2.2"
uuid = { version = "1.10.0", features = ["serde", "v4", "v7"] }
strum = "0.27.1"
strum_macros = "0.27.1"
rstest = "0.25.0"
async-std = { version = "1.13.1", features = ["attributes"] }
serde_yaml = "0.9.34"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[package.metadata.cargo-machete]
ignored = ["tauri-build"]
